--- a/scss/main.scss
+++ b/scss/main.scss
@@ -48,6 +48,7 @@ $maincolor: white;
   letter-spacing: 3px;
   font-family: Custom;
   margin: 0px;
+  margin-right: 5px;
   color: $maincolor;
   font-size: 25px;
 }
